tests/negative_tests/syntax_errors/invalid_return_statement.c
// INVALID - Semantic Error: int function needs return value
int foo() {
    return;  // ERROR: missing return value
}
